@@ -2,15 +2,22 @@
 package com.is.mindart.gestioneDisegno.controller;
 
 import com.is.mindart.gestioneDisegno.service.DisegnoDTO;
+import com.is.mindart.gestioneDisegno.service.DisegnoDTOResponse;
 import com.is.mindart.gestioneDisegno.service.DisegnoService;
+import com.is.mindart.gestioneDisegno.service.ValutazioneRequest;
 import com.is.mindart.gestioneSessione.model.SessioneRepository;
+import jakarta.validation.Valid;
 import lombok.AllArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import java.util.List;
 
 /**
  * Controller per gestire le operazioni relative ai Disegni.
@@ -52,15 +59,61 @@ public class DisegnoController {
      */
     @GetMapping("terapeuta/sessione/disegno/")
     public ResponseEntity<DisegnoDTO> getDisegnoTerapeutaBySessioneId() {
-       Authentication authentication = SecurityContextHolder
-               .getContext().getAuthentication();
-         String principal = (String) authentication.getPrincipal();
+        Authentication authentication = SecurityContextHolder
+                .getContext().getAuthentication();
+        String principal = (String) authentication.getPrincipal();
         Long sessioneId = sessioneRepository
                 .findByTerminataFalseAndTerapeuta_EmailOrderByDataAsc(principal)
-                .get(0).getId();
-            DisegnoDTO disegnoResponseDTO = disegnoService
-                    .getDisegnoBySessioneId(sessioneId);
+                .getFirst().getId();
+        DisegnoDTO disegnoResponseDTO = disegnoService
+                .getDisegnoBySessioneId(sessioneId);
         return ResponseEntity.ok(disegnoResponseDTO);
     }
+
+    /**
+     * Permette al terapeuta di votare un disegno.
+     * @param disegnoId id del disegno.
+     * @param valutazione voto da assegnare.
+     * @return 200 OK
+     */
+    @PostMapping("terapeuta/disegno/{disegnoId}/valutazione")
+    public ResponseEntity<Object> vota(
+            @PathVariable final long disegnoId,
+            @Valid @RequestBody final ValutazioneRequest valutazione) {
+        disegnoService
+                .vota(disegnoId, valutazione.getValutazione());
+        return ResponseEntity.ok().build();
+    }
+
+
+    /**
+     * Restituisce i disegni di un bambino.
+     * @param id id del bambino
+     * @return 200 OK
+     */
+    @GetMapping("terapeuta/bambino/{id}/disegni/")
+    public ResponseEntity<List<DisegnoDTOResponse>> getDisegniByBambinoId(
+            @PathVariable final Long id) {
+
+        List<DisegnoDTOResponse> disegnoResponseDTO = disegnoService
+                .getDisegniByBambinoId(id);
+        return ResponseEntity.ok(disegnoResponseDTO);
+    }
+
+    /**
+     * Restituisce i disegni di un bambino.
+     * @param id id del bambino
+     * @return 200 OK
+     */
+    @GetMapping("terapeuta/disegno/{id}")
+    public ResponseEntity<DisegnoDTO> getDisegnoById(
+            @PathVariable final Long id) {
+        Authentication authentication = SecurityContextHolder
+                .getContext().getAuthentication();
+        String principal = (String) authentication.getPrincipal();
+        DisegnoDTO disegnoResponseDTO = disegnoService.getDisegnoById(id);
+        return ResponseEntity.ok(disegnoResponseDTO);
+    }
+
 
 }
